--- a/src/abstract.tex
+++ b/src/abstract.tex
@@ -1,10 +1,26 @@
+% 卒論では和文・英文の概要のどちらか一方のみ．
+% 卒論を英語で書くなら英文，日本語で書くなら和文の概要を記述．
+% 修論では和文と英文の両方の概要が必要．
+% ただし，英語で修論を書く場合は英文概要のみ．
+
+% 英文概要
+\section*{Abstract}
+
+Write your English abstract here. 
+If you are writing your thesis in English, a Japanese abstract is not necessary. 
+The English abstract is limited to 300 words.
+
+% 改ページ
+\clearpage
+
+
+% 和文概要
 \section*{概要}
-% \section*{Abstract}
 
-論文を英語で書くなら英文，日本語で書くなら和文の概要を記述する．
+卒論の場合，論文を英語で書くなら英文，日本語で書くなら和文の概要を記述する．
 使用言語が日本語の場合は400字以内，英語の場合は300語以内の概要を書く．
-英語で書く場合は，\verb|\section*{概要}|の代わりに\verb|\section*{Abstract}|を使用する．
-
+修論の場合，英文概要（300語以内）を記載する．
+使用言語が日本語の場合には，ページを改めて，和文概要（400字以内）を記述する．
 
 % 改ページ
 \clearpage
