Minor fix in bibliography command

--- a/thesis_main.tex
+++ b/thesis_main.tex
@@ -61,7 +61,7 @@
 
 %% BibTeX 使用者 %%
 \bibliographystyle{kit_mech_thesis}
-\bibliography{example.bib} % ご自身のbibファイル名を入れる
+\bibliography{example} % ご自身のbibファイル名を入れる
 
 %% 手入力愛好者 %%
 % \begin{thebibliography}{10}
