--- a/src/thesis_data.tex
+++ b/src/thesis_data.tex
@@ -11,9 +11,17 @@
 % 提出日（英語），卒論の場合は未使用
 \newcommand{\DateSubmitted}{February **, 20**}
 
+% 表紙・背表紙の印刷部数（thesis_covers.tex用）
+\newcommand{\TitleCopyNumber}{3}
+
 % 論文題目（日本語）, 1行目と2行目を分けて入力（脱字に注意）
 \newcommand{\ThesisTitleOneJP}{機械工学課程/機械物理学専攻/機械設計学専攻}
 \newcommand{\ThesisTitleTwoJP}{卒論・修論 {\LaTeX} テンプレート}
+% \newcommand{\ThesisTitleTriJP}{幻の三行目} % 日本語題目の三行目（不要な場合はコメントアウト）
+
+% 背表紙用のタイトル，コメントアウトした場合は上記の論文題目を表示（thesis_covers.tex用）
+% \newcommand{\SpineTitle}{タイトルが長いなどの理由で任意の位置に改行を\newline
+%                          入れたい場合はこの例のよう入力（誤字・脱字に注意）}
 
 % 論文題目（英語）, 卒論未使用
 \newcommand{\ThesisTitleEN}{Unofficial {\LaTeX} Template for a Thesis in\\
